Add an app description page.

--- a/src/main/resources/help/html/TableOfContents.html
+++ b/src/main/resources/help/html/TableOfContents.html
@@ -14,4 +14,12 @@
     </tr>
     </tbody>
 </table>
-<p><a href="../../../../../README.md">README</a> - Overview of the application.<br>The Interface - selection tree with menu bar and viewer pane.<br>Goals<br>Events<br>Calendar Views<br>Calendar Notes<br>Searches<br>Archives  </p>
+<p><a href="../../../../../README.md">README</a> - Overview of the application.<br>
+    <a href="description.md">Description</a> - selection tree with menu bar and viewer pane.<br>
+    Goals<br>
+    Events<br>
+    Calendar Views<br>
+    Calendar Notes<br>
+    Searches<br>
+    Archives
+</p>
