Moved the setting of userDataHome into the FILE data accessor, prep for new startup operations.

--- a/src/main/resources/help/html/TableOfContents.html
+++ b/src/main/resources/help/html/TableOfContents.html
@@ -14,8 +14,9 @@
     </tr>
     </tbody>
 </table>
-<p><a href="../../../../../README.md">README</a> - Overview of the application.<br>
-    <a href="description.md">Description</a> - selection tree with menu bar and viewer pane.<br>
+<p>
+    <a href="../../../../../README.md">README</a> - Overview of the application.<br>
+    <a href="../markdown/description.md">Description</a> - selection tree with menu bar and viewer pane.<br>
     Goals<br>
     Events<br>
     Calendar Views<br>
