Reduced runtime debug verbosity, added jar file extraction code to startup, fix icon file references.

--- a/src/main/resources/help/html/TableOfContents.html
+++ b/src/main/resources/help/html/TableOfContents.html
@@ -16,7 +16,7 @@
 </table>
 <p>
     <a href="../../../../../README.md">README</a> - Overview of the application.<br>
-    <a href="../markdown/description.md">Description</a> - selection tree with menu bar and viewer pane.<br>
+    <a href="../markdown/Description.md">Description</a> -  controls and views<br>
     Goals<br>
     Events<br>
     Calendar Views<br>
