Tests rehabilitation due to reorder of userDataHome and construction of a new DataAccessor.  Change to access methods for help TableOfContents.html

--- a/src/main/resources/help/html/TableOfContents.html
+++ b/src/main/resources/help/html/TableOfContents.html
@@ -4,7 +4,7 @@
 <table>
     <thead>
     <tr>
-        <th>Table of Contents</th>
+        <th><h1>Table of Contents</h1></th>
         <th style="text-align:right"><img src="../../images/MemBank40.png" alt=""></th>
     </tr>
     </thead>
@@ -14,13 +14,8 @@
     </tr>
     </tbody>
 </table>
-<p>
-    <a href="../../../../../README.md">README</a> - Overview of the application.<br>
-    <a href="../markdown/Description.md">Description</a> -  controls and views<br>
-    Goals<br>
-    Events<br>
-    Calendar Views<br>
-    Calendar Notes<br>
-    Searches<br>
-    Archives
-</p>
+<h2 id="user-info">User Info</h2>
+<p><a href="../../../../../README.md">README</a> - Overview of the application.<br><a href="Description.md">Description</a> - controls and views<br>Goals<br>Events<br>Calendar Views<br>Calendar Notes<br>Searches<br>Archives  </p>
+<h2 id="developer-advanced-info">Developer / Advanced Info</h2>
+<p><a href="Data%20Locations.md">Data Locations</a> - Program and User data locations for various execution
+    environments.<br>Build Configurations<br>Run Configurations  </p>
