Coordination of icon accesses with the help docs.

--- a/src/main/resources/help/html/TableOfContents.html
+++ b/src/main/resources/help/html/TableOfContents.html
@@ -1,4 +1,4 @@
-<!--From: https://markdowntohtml.com/-->
+<!--Started this doc from the markdown version, converted by: https://markdowntohtml.com/-->
 <!DOCTYPE html>
 <html lang="en">
 <table>
@@ -15,7 +15,12 @@
     </tbody>
 </table>
 <h2 id="user-info">User Info</h2>
-<p><a href="../../../../../README.md">README</a> - Overview of the application.<br><a href="Description.md">Description</a> - controls and views<br>Goals<br>Events<br>Calendar Views<br>Calendar Notes<br>Searches<br>Archives  </p>
+<p><a href="../../../../../README.md">README</a> - Overview of the application.<br>
+    <a href="Description.md">Description</a> - controls and views<br>
+    Goals<br>Events<br>
+    Calendar Views<br>
+    Calendar Notes<br>Searches<br>
+    Archives  </p>
 <h2 id="developer-advanced-info">Developer / Advanced Info</h2>
 <p><a href="Data%20Locations.md">Data Locations</a> - Program and User data locations for various execution
     environments.<br>Build Configurations<br>Run Configurations  </p>
