Help system changes

--- a/src/main/resources/help/html/TableOfContents.html
+++ b/src/main/resources/help/html/TableOfContents.html
@@ -1,29 +1,11 @@
 <!--Started this doc from the markdown version, converted by: https://markdowntohtml.com/-->
 <!DOCTYPE html>
 <html lang="en">
-<table>
-    <thead>
-    <tr>
-        <th><h1>Table of Contents</h1></th>
-        <th style="text-align:right"><img src="../../images/MemBank40.png" alt=""></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td></td>
-    </tr>
-    </tbody>
-</table>
-<h2 id="user-info">User Info</h2>
+<h2 id="table-of-contents">Table of Contents</h2>
 <p>
-    <a href="Description.md">Description</a> - controls and views<br>
-    Goals<br>Events<br>
+    <a href="Overview.md">Overview</a>  Introduction to the application<br>
+    <a href="Description.md">Description</a> - controls and views<br>Goals<br>
+    Events<br>
     Calendar Views<br>
-    Calendar Notes<br>Searches<br>
-    Archives  </p>
-<h2 id="developer-advanced-info">Developer / Advanced Info</h2>
-<p>
-    <a href="../../../../../README.md">README</a> - Overview of the application.<br>
-    <a href="Data%20Locations.md">Data Locations</a> - Program and User data locations for various execution
-    environments.<br>Build Configurations<br>Run Configurations
+    Calendar Notes<br>Searches<br>Archives
 </p>
